# grupo-1-dashboard-produtividade-dev

./: .gitignore  README.md  docker-compose.yml  fluxograma_dashboard_produtividade.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
.kiro/: kirorails.conf  prompts.md
.kiro/agents/: bugfix-investigator.md  codebase-mapper.md  planner.md  quick-change.md  report-generator.md  verifier.md
.kiro/docs-iniciais/: PRD-dashboard-produtividade-dev.md  dashboard-de-produtividade-dev.md  gitflow_kiro_guidelines.md  uv_kiro_guidelines.md
.kiro/hooks/: decision-tracker.md  on-file-save-guardrails.md  on-spec-created.md  post-task-verification.md  pre-task-quality.md  ruff-lint-check.kiro.hook  session-summary.md
.kiro/specs/: backlog.md
.kiro/specs/dashboard-frontend/: design.md  requirements.md  tasks.md
.kiro/specs/export-deploy/: design.md  requirements.md  tasks.md
.kiro/specs/feature/: design.template.md  tasks.template.md
.kiro/specs/github-ingestion/: design.md  requirements.md  tasks.md
.kiro/specs/project-base-setup/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/rag-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/sprint-1-setup/: tasks.md
.kiro/specs/sprint-2-ingestion/: tasks.md
.kiro/specs/sprint-3-rag/: tasks.md
.kiro/specs/sprint-4-frontend/: tasks.md
.kiro/specs/sprint-5-polish/: tasks.md
.kiro/steering/: backend.md  coding-standards.md  fastapi.md  frontend.md  product.md  project-guidelines.md  project.md  security.md  structure.md  tech.md  testing.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/data/chroma/: chroma.sqlite3
backend/docs/: guia-modelos-sqlmodel.md
backend/src/: config.py  database.py  logging_config.py  main.py
backend/src/github/: collector.py  models.py
backend/src/rag/: embeddings.py  llm_client.py  models.py  pipeline.py  vector_store.py
backend/src/routes/: export.py  github.py  health.py  insights.py  metrics.py  settings.py
backend/src/services/: env_writer.py  ingestion.py  metrics.py
backend/tests/: conftest.py  test_collector.py  test_config.py  test_env_properties.py  test_ingestion.py  test_integration.py  test_main.py  test_metrics_service.py  test_models.py  test_pipeline.py  test_settings_routes.py  test_structure.py
docs/: decisoes-arquitetura.md  prompts.md  rubrica-qualidade.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml
frontend/src/: App.tsx  api_client.py  app.py
frontend/src/api/: client.ts
frontend/src/components/Charts/: CommitsChart.tsx  PRsChart.tsx
frontend/src/components/Chat/: ChatPanel.tsx
frontend/src/components/Filters/: DateRangePicker.tsx  ExportButtons.tsx  MetricToggle.tsx
frontend/src/components/KPICards/: KPICard.tsx  KPIGrid.tsx
frontend/src/components/Layout/: Header.tsx  MainLayout.tsx
frontend/src/pages/: ChatPage.tsx  Dashboard.tsx  SettingsPage.tsx  chat.py  dashboard.py  settings.py
frontend/tests/: test_api_client.py  test_app.py  test_pages.py
