[project]
name = "dashboard-produtividade-backend"
version = "0.1.0"
description = "Backend FastAPI do Dashboard Produtividade Dev"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "sentence-transformers>=3.4.0",
    "chromadb>=0.6.0",
    "aisuite[openai]>=0.1.0",
    "fpdf2>=2.8.0",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "hypothesis>=6.0.0",
    "ruff>=0.9.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
