[project]
name = "dashboard-produtividade-backend"
version = "0.1.0"
description = "Backend FastAPI do Dashboard Produtividade Dev"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "loguru==0.7.3",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "sentence-transformers==5.3.0",
    "chromadb==1.5.5",
    "aisuite[openai]==0.1.6",
    "fpdf2==2.8.7",
    "apscheduler==3.11.2",
    "slowapi==0.1.9",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.0.0",
    "hypothesis==6.151.9",
    "ruff==0.15.7",
    "pip-audit==2.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
