[project]
name = "dashboard-produtividade-frontend"
version = "0.1.0"
description = "Frontend do Dashboard de Produtividade Dev"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "plotly",
    "python-dotenv",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
